--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "fuse.js": "^6.5.3",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
@@ -16,6 +17,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select-search": "^3.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
