--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "fuse.js": "^6.5.3",
     "graphql": "^16.3.0",
+    "http": "^0.0.1-security",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-chartjs-2": "^4.0.1",
