--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "fuse.js": "^6.5.3",
-    "graphql": "^16.3.0",
     "http": "^0.0.1-security",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
-    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-select-search": "^3.0.9",
+    "recharts": "^2.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
